# ai-ml-projects

./: README.md  main.py  pyproject.toml
Langchain-101/: .env  1_basic.py  2_chat-basic.py  3_chat-save-file.py  4_prompt-template.py  5_chain-basic.py  6_Runnable-Sequence.py  7_Runnable-Parallel.py  8a_Rag-basic.py  8b_Rag-basic.py  README.md  pyproject.toml
Langchain-101/books/: book-1.txt
